force-app/main/default/objects/Agentforce_Topic_Learning__c/Agentforce_Topic_Learning__c.object-meta.xml
<CustomObject>
    <label>Agentforce Topic Learning</label>
    <pluralLabel>Agentforce Topic Learnings</pluralLabel>
    <nameField>
        <label>Learning Number</label>
        <type>AutoNumber</type>
        <displayFormat>ATL-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores learning history and improvement patterns for Agentforce Topic generation. Each record represents one generation of learned improvements per object/trigger type combination.</description>
</CustomObject>