force-app/main/default/objects/Agentforce_Topic_Learning__c/fields/Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Date__c</fullName>
    <label>分析実行日時</label>
    <description>Timestamp when the feedback analysis was executed to produce this learning record.</description>
    <inlineHelpText>このレコードを生成したフィードバック分析の実行日時。</inlineHelpText>
    <type>DateTime</type>
</CustomField>