force-app/main/default/objects/Agentforce_Topic_Learning__c/fields/Analysis_Result__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Result__c</fullName>
    <label>分析結果</label>
    <description>JSON structure containing the raw feedback analysis result including category breakdown and problem examples.</description>
    <inlineHelpText>カテゴリ別内訳・問題事例などを含む、フィードバック分析の生データJSON。</inlineHelpText>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>