force-app/main/default/objects/Agentforce_Topic_Learning__c/fields/Generation__c.field-meta.xml
<CustomField>
    <fullName>Generation__c</fullName>
    <label>世代番号</label>
    <description>Version number of this learning record. Increments each time feedback analysis produces a new learning cycle.</description>
    <inlineHelpText>学習サイクルのバージョン番号。フィードバック分析のたびにインクリメントされます。</inlineHelpText>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>