force-app/main/default/objects/Agentforce_Topic_Learning__c/fields/Improvement_Patterns__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Patterns__c</fullName>
    <label>改善パターン</label>
    <description>JSON structure containing improvement guidelines derived from feedback analysis. Used to inject improvement context into prompt generation.</description>
    <inlineHelpText>フィードバック分析から導出した改善ガイドラインのJSON。プロンプト生成時に改善コンテキストとして注入されます。</inlineHelpText>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>