force-app/main/default/objects/Agentforce_Topic_Learning__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>最新学習</label>
    <description>Indicates whether this is the currently active learning record for this object/trigger type combination. Only one record per scope should be active at a time.</description>
    <inlineHelpText>このレコードが現在有効な学習データかどうかを示します。同一スコープで有効なレコードは常に1件のみです。</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>