force-app/main/default/objects/Agentforce_Topic_Learning__c/fields/Negative_Feedback_Count__c.field-meta.xml
<CustomField>
    <fullName>Negative_Feedback_Count__c</fullName>
    <label>ネガティブフィードバック件数</label>
    <description>Number of negative feedback records analyzed to produce this learning record.</description>
    <inlineHelpText>この学習レコード生成に使用したネガティブフィードバックの件数。</inlineHelpText>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>