force-app/main/default/objects/Agentforce_Topic_Learning__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <label>関連オブジェクトAPI名</label>
    <description>API name of the Salesforce object this learning record applies to (e.g., Account, Opportunity).</description>
    <inlineHelpText>学習対象のSalesforceオブジェクトAPIName（例：Account, Opportunity）。Trigger Typeと組み合わせてスコープを特定します。</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>