force-app/main/default/objects/Agentforce_Topic_Learning__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <label>トリガータイプ</label>
    <description>Trigger type this learning record applies to. Combined with Object_Api_Name__c to scope learning.</description>
    <inlineHelpText>この学習レコードが対象とするトリガータイプ。関連オブジェクトAPI名と組み合わせて学習スコープを特定します。</inlineHelpText>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>